--- a/安装包安装使用记录.md
+++ b/安装包安装使用记录.md
@@ -24,3 +24,19 @@ audioread.exceptions.NoBackendError
 apt-get install ffmpeg
 ```
 
+#### 2、pyaudio
+
+- 安装:
+
+```
+pip install pyaudio
+
+....fetal error: portaudio.h: no such file or directory
+```
+
+- 解决办法：
+
+```
+$ sudo apt-get install libjack-jackd2-dev portaudio19-dev
+$ pip install pyaudio
+```
