--- a/安装包安装使用记录.md
+++ b/安装包安装使用记录.md
@@ -40,3 +40,11 @@ pip install pyaudio
 $ sudo apt-get install libjack-jackd2-dev portaudio19-dev
 $ pip install pyaudio
 ```
+
+#### 3、sox
+
+- 安装
+
+```
+sudo apt-get install sox
+```
