--- a/安装包安装使用记录.md
+++ b/安装包安装使用记录.md
@@ -48,3 +48,11 @@ $ pip install pyaudio
 ```
 sudo apt-get install sox
 ```
+
+#### 4、ffmpeg / avprobe
+
+- 安装
+
+```
+sudo apt-get install ffmpeg
+```
