--- a/安装包安装使用记录.md
+++ b/安装包安装使用记录.md
@@ -41,6 +41,12 @@ $ sudo apt-get install libjack-jackd2-dev portaudio19-dev
 $ pip install pyaudio
 ```
 
+- windows下多麦设备读取
+
+```
+下载 https://www.lfd.uci.edu/~gohlke/pythonlibs/#pyaudio 对应的版本即可
+```
+
 #### 3、sox
 
 - 安装
