--- a/量化/量化.md
+++ b/量化/量化.md
@@ -18,7 +18,8 @@
 
 ### 1.1 浮点与定点
 
- 		定点和浮点都是数值的表示（representation），它们区别在于，将整数（integer）部分和小数（fractional）部分分开的**点**，点在哪里。定点保留特定位数整数和小数，而浮点保留特定位数的*有效数字*（significand）和*指数*（exponent） 。比如：
+定点和浮点都是数值的表示（representation），它们区别在于，将整数（integer）部分和小数（fractional）部分分开的**点**，点在哪里。定点保留特定位数整数和小数，而浮点保留特定位数的*有效数字*（significand）和*指数*（exponent）。
+比如：
 
 |        | fixed point  | floating point       |
 | ------ | ------------ | -------------------- |
